examples/ok/bb1_asym_correct.zc
../all/bb1_asym_correct.zc