examples/fail/t_assm_dec_bs.zc
../all/t_assm_dec_bs.zc